# popvae

./: .gitignore  README.md  popvae.py  pyproject.toml  setup.py
data/pabu/: pabu_test_sample_data.csv  pabu_test_sample_data.txt
popvae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: 1Kg_decoder_tests.py  bigtest.vcf  new_history.txt  new_latent_coords.txt  new_param_grid.csv  new_training_preds.txt  original_history.txt  original_latent_coords.txt  original_param_grid.csv  original_training_preds.txt  plot_vae.R  plot_vae2.R  plotvae.html  plotvae.py  popvae.py  popvae2.py  popvae_decoder_dev.py  popvae_decoder_tests_HGDP.py  popvae_dev.py  stdpopsim_1kg_pi_test.py  streaming_data.py  test.vcf  test.vcf.big.popvae.hdf5  testing_midtest.vcf.popvae.hdf5  testing_test.vcf.popvae.hdf5  testingtest.vcf.popvae.hdf5  training_test.vcf.popvae.hdf5  trainingtest.vcf.popvae.hdf5  vae_history.txt  vae_latent_coords.txt  vae_param_grid.csv  vae_training_preds.txt
